--- a/dsgrid_project/datasets/sector_models/tempo/dataset.toml
+++ b/dsgrid_project/datasets/sector_models/tempo/dataset.toml
@@ -36,7 +36,7 @@ American Community Survey US counties, 2018."""
 class = "Subsector"
 type = "subsector"
 name = "TEMPO Bin"
-display_name = "Subsector"
+display_name = "Household and Vehicle Type"
 file = "dimensions/bin.csv"
 description = """
 TEMPO demographic/geographic/vehicle bins.
@@ -52,7 +52,7 @@ This is a cross-join of the following supplemental dimensions:
 class = "EnergyEndUse"
 type = "metric"
 name = "TEMPO LDV PEV Usage"
-display_name = "Energy End Use"
+display_name = "Electric Vehicle Charging"
 file = "dimensions/end_use.csv"
 description = """
 Type of charging (L1 and L2, DCFC) used by TEMPO PEVs."""
@@ -61,7 +61,7 @@ Type of charging (L1 and L2, DCFC) used by TEMPO PEVs."""
 class = "Time"
 type = "time"
 name = "Time of Week by Month"
-display_name = "Timestamp"
+display_name = "Hourly for Representative Weeks"
 ranges = [{start = 1, end = 12}]
 time_interval_type = "period_ending"
 time_type = "representative_period"
@@ -74,7 +74,7 @@ TEMPO Time - Month (representing seasons), day of week, and hour of day."""
 class = "DataSource"
 type = "data_source"
 name = "TEMPO Model"
-display_name = "Data Source"
+display_name = "TEMPO"
 file = "dimensions/data_source.csv"
 description = """
 TEMPO model"""
@@ -83,7 +83,7 @@ TEMPO model"""
 class = "ModelYear"
 type = "model_year"
 name = "TEMPO Model Year"
-display_name = "Model Year"
+display_name = "TEMPO Model Year"
 file = "dimensions/year.csv"
 description = """
 TEMPO modeling years for CONUS 2022 project, 2018-2050"""
@@ -92,7 +92,7 @@ TEMPO modeling years for CONUS 2022 project, 2018-2050"""
 class = "Sector"
 type = "sector"
 name = "Transportation Sector"
-display_name = "Sector"
+display_name = "Transportation"
 file = "dimensions/sector.csv"
 description = """Transportation Sector"""
 
@@ -120,5 +120,5 @@ Weather year, 2012 only
 file = "../../../dimensions/weather_years.csv"
 module = "dsgrid.dimension.standard"
 name = "2012 Weather Year"
-display_name = "Weather Year"
+display_name = "2012 Weather"
 type = "weather_year"
