--- a/dsgrid_project/project.toml
+++ b/dsgrid_project/project.toml
@@ -127,7 +127,7 @@ type = "data_source"
 class = "Time"
 frequency = "P0DT1H0M0.000000S"
 name = "Time-2012-UTC-hourly-periodBeginning-noDST-noLeapDayAdjustment-total"
-display_name = "Hourly 2012"
+display_name = "2012 Hourly UTC"
 ranges = [{start = "2012-01-01 00:00:00", end = "2013-12-31 23:00:00"}]
 time_type = "datetime"
 leap_day_adjustment = "none"
