--- a/dsgrid_project/datasets/sector_models/tempo/dimension_mappings.toml
+++ b/dsgrid_project/datasets/sector_models/tempo/dimension_mappings.toml
@@ -10,10 +10,10 @@ file = "dimension_mappings/metric_to_metric.csv"
 mapping_type = "one_to_one"
 
 [[mappings]]
-description = "2018-2050 to 2010-2050 with 2 year increments"
+description = "2018-2050 from interpolating for every other year"
 dimension_type = "model_year"
 file = "dimension_mappings/model_year_to_model_year.csv"
-mapping_type = "one_to_one"
+mapping_type = "many_to_many"
 
 [[mappings]]
 description = "TEMPO demographic/geographic/vehicle bins (CONUS 2022) to dsgrid CONUS 2022 Subsectors"
