--- a/dsgrid_project/datasets/sector_models/tempo/dimension_mappings.toml
+++ b/dsgrid_project/datasets/sector_models/tempo/dimension_mappings.toml
@@ -13,7 +13,7 @@ mapping_type = "one_to_one"
 description = "2010-2050 from interpolating for every other year and 0 for 2010-2017"
 dimension_type = "model_year"
 file = "dimension_mappings/model_year_to_model_year.csv"
-mapping_type = "many_to_many"
+mapping_type = "many_to_many_explicit_multipliers"
 
 [[mappings]]
 description = "TEMPO demographic/geographic/vehicle bins (CONUS 2022) to dsgrid CONUS 2022 Subsectors"
