move growth_rates to sector_model

--- a/dsgrid_project/datasets/sector_models/aeo2021_reference/commercial/End_Use_Growth_Factors/dataset.toml
+++ b/dsgrid_project/datasets/sector_models/aeo2021_reference/commercial/End_Use_Growth_Factors/dataset.toml
@@ -3,7 +3,7 @@
 # ------------------------------------------------
 
 dataset_id = "aeo2021_ref_com_energy_end_use_growth_factors"
-dataset_type = "benchmark"
+dataset_type = "sector_model"
 data_source = "NEMS Commercial Module"
 description = """
 AEO 2021 Reference Case Commercial Energy End Use Annual Growth Factors. 
