update display names
Such that they do not start with numbers

--- a/dsgrid_project/datasets/sector_models/tempo/dataset.toml
+++ b/dsgrid_project/datasets/sector_models/tempo/dataset.toml
@@ -83,7 +83,7 @@ TEMPO model"""
 class = "ModelYear"
 type = "model_year"
 name = "TEMPO Model Year"
-display_name = "TEMPO Model Year"
+display_name = "TEMPO Model Years"
 file = "dimensions/year.csv"
 description = """
 TEMPO modeling years for CONUS 2022 project, 2018-2050"""
@@ -123,5 +123,5 @@ Weather year, 2012 only
 file = "../../../dimensions/weather_years.csv"
 module = "dsgrid.dimension.standard"
 name = "2012 Weather Year"
-display_name = "2012 Weather"
+display_name = "Weather 2012"
 type = "weather_year"
