--- a/dsgrid_project/datasets/sector_models/resstock/dataset.toml
+++ b/dsgrid_project/datasets/sector_models/resstock/dataset.toml
@@ -96,7 +96,7 @@ Scenario: CONUS (Continental U.S.) 2022 Reference
 [[dimensions]]
 type = "model_year"
 name = "Model-Year-2018"
-display_name = "2018"
+display_name = "Model Year 2018"
 file = "dimensions/model_year_2018.csv"
 module = "dsgrid.dimension.standard"
 class = "ModelYear"
@@ -112,7 +112,7 @@ Weather year, 2012 only
 file = "../../../dimensions/weather_years.csv"
 module = "dsgrid.dimension.standard"
 name = "2012 Weather Year"
-display_name = "2012 Weather"
+display_name = "Weather 2012"
 type = "weather_year"
 
 # [[dimensions]] # for real dataset
@@ -136,7 +136,7 @@ type = "weather_year"
 class = "Time"
 frequency = "P0DT1H0M0.000000S"
 name = "Time-2012-EST-8784-hourly-periodEnding-noLeapDayAdjustment-total-Hour0Start"
-display_name = "2012 Hourly EST"
+display_name = "Time EST"
 ranges = [{start = "2012-01-01 00:00:00", end = "2012-12-31 23:00:00"}]
 time_type = "datetime"
 leap_day_adjustment = "none"
