--- a/dsgrid_project/project.toml
+++ b/dsgrid_project/project.toml
@@ -129,7 +129,7 @@ type = "data_source"
 class = "Time"
 frequency = "P0DT1H0M0.000000S"
 name = "Time-2012-EST-hourly-periodBeginning-noLeapDayAdjustment-total"
-display_name = "2012 Hourly EST"
+display_name = "Time EST"
 ranges = [{start = "2012-01-01 00:00:00", end = "2012-12-31 23:00:00"}]
 time_type = "datetime"
 leap_day_adjustment = "none"
@@ -150,7 +150,7 @@ Weather year, 2012 only
 file = "dimensions/weather_years.csv"
 module = "dsgrid.dimension.standard"
 name = "2012 Weather Year"
-display_name = "2012 Weather"
+display_name = "Weather 2012"
 type = "weather_year"
 
 # ------------------------------------------------------
