--- a/dsgrid_project/datasets/other_modeled/dsgrid_efs_2012_distributed_generation/dataset.toml
+++ b/dsgrid_project/datasets/other_modeled/dsgrid_efs_2012_distributed_generation/dataset.toml
@@ -27,9 +27,9 @@
 # 4 2012-01-01 10:00:00  43.563129         0.0   1
 
 dataset_id = "dsgrid_efs_2012_distributed_generation"
-dataset_type = "sector_model" # @ehale: what is the dataset type here? sector_model, benchmark, historical don't exactly fit
-data_source = "efs" # TODO: What is the datasource? EFS?
-description = "?" # TODO: What description?
+dataset_type = "historical" # @ehale: what is the dataset type here? sector_model, benchmark, historical don't exactly fit; this is a historical-modeled kind of dataset
+data_source = "dsgrid-efs" # TODO: Do we want to differentiate this data_source from the losses data_source, e.g., dsgrid-efs-losses and dsgrid-efs-chp? Or just have the same datasource for both datasets?
+description = "Combined heat and power (CHP) and behind-the-meter distributed thermal generation estimates derived from DOE Combined Heat and Power (CHP) Installation Databas, EIA Form 860, EIA Form 923, and EPA continuous emission monitoring systems (CEMS) data. Details in https://www.nrel.gov/docs/fy18osti/71492.pdf starting on page 56."
 origin_creator = "Elaine Hale"
 origin_organization = "NREL"
 origin_contributors = ["Elaine Hale"]
@@ -45,14 +45,15 @@ trivial_dimensions = ["weather_year", "model_year", "scenario", "data_source", "
 [data_schema]
 load_data_column_dimension = "metric"
 
-[[dimensions]] # TODO: need to recreate the data; analysis to make it county level losses
+# TODO: include disaggregation factor in state-to-county dimension mapping file; base it off of population; this should be the same as the losses dimension mapping
+[[dimensions]]
 type = "geography"
-name = "states" # TODO - change to county
-display_name = "States" # TODO - change to county
-file = "dimensions/geography.csv" # TODO - change to county
+name = "states"
+display_name = "States"
+file = "dimensions/geography.csv"
 module = "dsgrid.dimension.standard"
-class = "State" # TODO - change to county
-description = "?" # TODO - change to county
+class = "State"
+description = "?"
 
 [[dimensions]]
 type = "sector"
@@ -73,7 +74,7 @@ class = "Subsector"
 description = "All Subsectors"
 
 [[dimensions]]
-type = "metric" # TODO: units are in MWh. Should we convert this in pre-processing?
+type = "metric" # TODO: units are in MWh. We might need to apply a *1000 factor in the mapping? Or can dsgrid handle these kinds of conversions? Also, does dsgrid detect that there is a unit mismatch?
 name = "chp_dg"
 display_name = "CHP and Thermal DG"
 file = "dimensions/metric.csv"
@@ -83,32 +84,42 @@ description = "Combined Heat and Power and Thermal DG from the EFS study"
 
 [[dimensions]]
 type = "data_source"
-name = "efs" # TODO - what should this be?
-display_name = "EFS" # TODO - what should this be?
-file = "dimensions/data_source.csv" # TODO: doesn't exist; What is the data source?
+name = "dsgrid-efs"
+display_name = "dsgrid EFS"
+file = "../../benchmark/dsgrid_efs_2012_losses/dimensions/data_source.csv"
 module = "dsgrid.dimension.standard"
 class = "DataSource"
-description = "Electric Futures Study (2018)" # TODO - what should this be?
+description = "Electric Futures Study (2018)" # TODO - make sure this is the same
 
-# TODO: how are we applying this across project scenarios?
+# reuse data_source dim records from losses path
+[[dimensions]]
+type = "data_source"
+name = "dsgrid-efs"
+display_name = "EFS"
+file = "../..//benchmark/dsgrid_efs_2012_losses/dimensions/data_source.csv"
+module = "dsgrid.dimension.standard"
+class = "DataSource"
+description = "dsgrid data for historical year 2012 created for the NREL Electrification Futures Study" 
+
+# use the resstock scenario dimension
 [[dimensions]]
 type = "scenario"
 name = "Conus-2022-reference"
 display_name = "Reference"
-file = "dimensions/scenario.csv"
+file = "../../sector_models/resstock/dimensions/scenario_conus_2022_reference.csv"
 module = "dsgrid.dimension.standard"
 class = "Scenario"
-description = "?" # TODO: what should this be?
+description = "CONUS (Continental U.S.) 2022 Reference"
 
-# TODO: what is the model year?? how are we applying this across model_years ?
+# use the same weather_year as losses
 [[dimensions]]
 type = "model_year"
-name = "Model-Year-2018"
-display_name = "2018"
-file = "dimensions/model_year.csv"
+name = "Model-Year-2012"
+display_name = "2012"
+file = "../../benchmark/dsgrid_efs_2012_losses/dimensions/model_year.csv"
 module = "dsgrid.dimension.standard"
 class = "ModelYear"
-description = "?" # TODO
+description = "2012 Model Year"
 
 [[dimensions]] # shared with project
 class = "WeatherYear"
@@ -120,7 +131,7 @@ display_name = "2012 Weather"
 type = "weather_year"
 
 
-# Note: this does not match the project time
+# Note: this does not match the project time because of it being period-ending, not period-beginning
 [[dimensions]]
 name = "Time-2012-EST-hourly-periodEnding-noDST-noLeapDayAdjustment-total-UTChour1start"
 display_name = "2012 Hourly EST"
