--- a/dsgrid_project/datasets/modeled/comstock/dataset.toml
+++ b/dsgrid_project/datasets/modeled/comstock/dataset.toml
@@ -3,7 +3,7 @@
 # --------------------------------------
 
 dataset_id = "conus_2022_reference_comstock"
-dataset_type = "sector_model"
+dataset_type = "modeled"
 data_source = "comstock"
 description = """
 Time-shifted and filled for Dec31, simulated on 09/29/2021 using:
