--- a/dsgrid_project/datasets/modeled/tempo/dataset.toml
+++ b/dsgrid_project/datasets/modeled/tempo/dataset.toml
@@ -5,6 +5,7 @@
 dataset_id = "tempo_conus_2022"
 dataset_type = "modeled"
 data_source = "tempo"
+sector_description = "transportation"
 description = """
 CONUS 2022 TEMPO county-level results for PEV charging."""
 
