--- a/dsgrid_project/project.toml
+++ b/dsgrid_project/project.toml
@@ -33,7 +33,7 @@ dataset_type = "modeled"
 version = "1.0.0"
 
 [dimensions]
-all_in_one_supplemental_dimensions = ["sector", "subsector", "data_source"]
+all_in_one_supplemental_dimensions = ["sector", "subsector", "data_source"] #, "metric"] -- add metric here?
 
 # ------------------------------------------------------
 # Base Dimensions
