--- a/dsgrid_project/project.toml
+++ b/dsgrid_project/project.toml
@@ -8,23 +8,24 @@ dimension_associations = ["dimension_associations/data_source__metric.csv", "dim
 # ------------------------------------------------------
 # Input Datasets Dimensions
 # ------------------------------------------------------
-# [datasets]
-# benchmark = [] # ignoring this for now
-# historical = [] # ignoring this for now
+# historical
 
+# benchmark 
+
+# modeled
 [[datasets]]
 dataset_id = "tempo_conus_2022"
-dataset_type = "sector_model"
+dataset_type = "modeled"
 version = "1.0.0"
 
 [[datasets]]
 dataset_id = "conus_2022_reference_resstock"
-dataset_type = "sector_model"
+dataset_type = "modeled"
 version = "1.0.0"
 
 [[datasets]]
 dataset_id = "conus_2022_reference_comstock"
-dataset_type = "sector_model"
+dataset_type = "modeled"
 version = "1.0.0"
 
 [dimensions]
