--- a/dsgrid_project/datasets/historical/eia_861_annual_energy_use_state_sector/dataset.toml
+++ b/dsgrid_project/datasets/historical/eia_861_annual_energy_use_state_sector/dataset.toml
@@ -1,14 +1,22 @@
+#   weather_year model_year  time_year geography sector  electricity_sales
+# 0         2010       2010       2010        AK    com          2835868.0
+# 1         2010       2010       2010        AK    ind          1324083.0
+# 2         2010       2010       2010        AK    res          2093217.0
+# 3         2010       2010       2010        AK  trans                0.0
+# 4         2010       2010       2010        AL    com         22986470.0
+
 dataset_id = "eia_861_annual_energy_use_state_sector"
 data_source = "EIA 861"
 dataset_type = "historical"
+sector_description = ""
 data_schema_type = "one_table"
-description = "EIA 861 Utility Customer Sales (MWh) by State by Sector by Year for 2010-2020"
+description = "EIA 861 Utility Customer Sales (MWh) by State by Sector by Year for 2010-2020" # TODO: update description to include more processing details and point to the script file
 origin_creator = "Meghan Mooney"
 origin_organization = "EIA"
-origin_contributors = [ "Lixi Liu", "Meghan Mooney", "Elaine Hale",]
-origin_project = "dsgrid Standard Scenarios 2021" # TODO: what is this?
-origin_date = "2022-08-17"
-origin_version = "0.1.0"
+origin_contributors = [ "Lixi Liu", "Meghan Mooney", "Elaine Hale",] # TODO: who should this be if organization = EIA?
+origin_project = "EIA 861"
+origin_date = "2022-08-17" # TODO: this date should change to eia 861 publication date
+origin_version = "0.1.0" # TODO: this date should change to eia 861 version
 source = "Data extracted from EIA 861 utility customer sales"
 data_classification = "low"
 tags = ["historical", "eia861", "sales"]
@@ -17,7 +25,7 @@ trivial_dimensions = [ "subsector", "scenario", "data_source"]
 [data_schema]
 load_data_column_dimension = "metric"
 
-[[dimensions]] # this is different than the project (it includes AK and HI)
+[[dimensions]] # this is different than the project supplemental state dimension (it includes AK and HI)
 class = "State"
 description = "US States"
 file = "dimensions/states.csv"
@@ -27,24 +35,25 @@ display_name = "State"
 type = "geography" 
 
 
-[[dimensions]] # already exists
-type = "sector"
-name = "Sectors - Com-Res-Tra-Only"
-display_name = "Sector"
+[[dimensions]] # same as project
+class = "Sector"
+description = """
+dsgrid Standard Scenarios 2021 Sectors; Commercial, Residential, Industrial and Transportation
+"""
 file = "../../../dimensions/sectors.csv"
 module = "dsgrid.dimension.standard"
-class = "Sector"
-description = ""
+name = "Sectors - Com-Res-Ind-Trans"
+display_name = "Sector"
+type = "sector"
 
-# TODO - how do we apply all subsectors?
 [[dimensions]]
 type = "subsector"
-name = "All Subsectors"
-display_name = "All Subsectors"
-file = "dimensions/subsectors_all.csv"
+name = "Unspecified Subsectors"
+display_name = "Unspecified Subsectors"
+file = "dimensions/subsectors_unspecified.csv"
 module = "dsgrid.dimension.standard"
 class = "Subsector"
-description = ""
+description = "Subsectors Unspecified"
 
 [[dimensions]]
 type = "metric"
@@ -52,14 +61,14 @@ name = "EIA861_customer_sales"
 display_name = "Customer Sales"
 file = "dimensions/eia861_sales_metric.csv"
 module = "dsgrid.dimension.standard"
-class = "EnergyEndUse"
+class = "EnergyEndUse" # TODO: is this right? Or do we need a new class for this?
 description = "Utility Customer Electricity Sales (MWh)"
 
 [[dimensions]] # use the same file as resstock
 type = "scenario"
 name = "Conus-2022-reference"
 display_name = "Reference"
-file = "../../sector_models/resstock/dimensions/scenario_conus_2022_reference.csv"
+file = "../../modeled/resstock/dimensions/scenario_conus_2022_reference.csv"
 module = "dsgrid.dimension.standard"
 class = "Scenario"
 description = "Scenario CONUS (Continental U.S.) 2022 Reference"
@@ -91,8 +100,6 @@ module = "dsgrid.dimension.standard"
 class = "ModelYear"
 description = "Model years, 2010-2020"
 
-
-# Should this be converted to no-op time?
 [[dimensions]]
 type = "time"
 class = "AnnualTime"
